--- a/TX PVI Analysis.ipynb
+++ b/TX PVI Analysis.ipynb
@@ -5,7 +5,7 @@
    "id": "72947d94",
    "metadata": {},
    "source": [
-    "# Partisan Voter Index for Texas State Legislatures"
+    "# Partisan Voter Index for Texas State Legislatures - Analysis"
    ]
   },
   {
@@ -13,24 +13,9 @@
    "id": "50df94f4",
    "metadata": {},
    "source": [
-    "This project aims to produce Partisan Voter Index(PVI) metrics for the upper and lower Texas State Legislatures, and see if there is meaningful difference in metrics calculated using national election data vs state-wide election data.\n",
+    "This project aims to produce Partisan Voter Index(PVI) metrics for the upper and lower Texas State Legislatures.\n",
     "\n",
-    "**What is Partisan Voter Index?**\n",
-    "\n",
-    "The Cook Political Report's Partisan Voter Index (CPVI) is a measure of how strongly a state or congressional district leans towards the Republican or Democratic party, compared to the country as a whole.\n",
-    "\n",
-    "It is a *relative* measure of lean for answering the question \"How does this district vote?\"\n",
-    "\n",
-    "Traditionally, PVI for a congressional district has been calculated by comparing how that congressional district voted in a given election, to a 'baseline' of how the country as a whole voted in the last two presidential elections.\n",
-    "\n",
-    "This project aims to produce PVI metrics for *state legislative districts*. The 'baseline' will be adapted to factor in state-wide executive office election returns, as well as presidential election returns from that state for the previous 2 election years.\n",
-    "\n",
-    "**How to Calculate Partisan Voter Index for a State Legislature after Redistricting**\n",
-    "\n",
-    "Texas Enacted new state legislative district boundaries after the 2020 census.\n",
-    "Calculating the PVI in a redistricting year requires matching vote tallies from previous elections (with different electoral boundaries) to the *new* geographic boundaries of legislative districts.\n",
-    "\n",
-    "This project uses precint-level election returns for 2016, 2018 and 2020, and will match voting precint geographies for each year of election returns to the 2022 state legislative district they fall under."
+    "Data pre-processing code, including merging precincts to 2022 legislative districts, can be found in the TX PVI ETL notebook."
    ]
   },
   {
