add titles to figures

--- a/Planning.ipynb
+++ b/Planning.ipynb
@@ -32,9 +32,9 @@
     "~~- Create a PVI metric(s) for new state legislative districts~~\n",
     "- Source data on which seats are open in the 2022 midterms, filing deadlines, historical open seats/competitiveness\n",
     "- Analyze differences in state leg election returns vs state wide vs federal (turnout, partisan lean)\n",
-    "- Visualize in graphs and maps\n",
+    "~~- Visualize in graphs and maps~~\n",
     "- Make recommendations about which data to use to predict partisan lean for upcoming downballot elections\n",
-    "- Future work - matching census data to the election returns, expanding to more states, comparing BETWEEN states (do some states follow national trends in downballot races?), incorporating open seats vs incumbent seats (after filing deadlines pass!)\n"
+    "~~- Future work - matching census data to the election returns, expanding to more states, comparing BETWEEN states (do some states follow national trends in downballot races?), incorporating open seats vs incumbent seats (after filing deadlines pass!)~~\n"
    ]
   },
   {
