add precinct visualization

--- a/Planning.ipynb
+++ b/Planning.ipynb
@@ -20,7 +20,7 @@
     "    - VEST + RDH\n",
     "- ~~Source precinct-level state election returns data for 2016, 2018, 2020~~\n",
     "    - VEST + RDH\n",
-    "- Match precincts to NEW state legislative districts using precinct centroid\n",
+    "- ~~Match precincts to NEW state legislative districts using precinct centroid~~\n",
     "    - ~~match 2016 SLDU with 2022 SLDU\n",
     "    - ~~match 2018 SLDU with 2022 SLDU~~\n",
     "    - ~~match 2020 SLDU with 2022 SLDU~~\n",
