add presentation link

--- a/TX PVI Analysis.ipynb
+++ b/TX PVI Analysis.ipynb
@@ -3096,32 +3096,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 61,
    "id": "d696db14",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Likely R    16\n",
-       "Likely D     7\n",
-       "Solid D      5\n",
-       "Solid R      3\n",
+       "Likely R       43\n",
+       "Solid D        39\n",
+       "Solid R        25\n",
+       "Likely D       25\n",
+       "Competitive    18\n",
        "Name: bins, dtype: int64"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sd_trim['bins'].value_counts()"
+    "hd_trim['bins'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 59,
    "id": "e80095a8",
    "metadata": {},
    "outputs": [
@@ -3172,7 +3173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 60,
    "id": "e8fa5333",
    "metadata": {
     "scrolled": true
